# chess-2d

./: .clang-format  CMakeLists.txt  README.md
.cache/clangd/index/: Bishop.cpp.CD851FC6EEE6C995.idx  Bishop.hpp.5B8ABF1ED9F12334.idx  Board.cpp.81E4826DB1A1E7FE.idx  Board.hpp.875553D2A3D8BF70.idx  King.cpp.B11B8DD401538FD0.idx  King.hpp.F23E298DADBE5E65.idx  Knight.cpp.8E291E635B7F2E32.idx  Knight.hpp.11841A914BB43E0D.idx  Pawn.cpp.028092612322B17F.idx  Pawn.hpp.0BF11999348A3269.idx  Piece.cpp.7468D401B057BCB6.idx  Piece.hpp.177CE686412E8FDF.idx  Queen.cpp.76F10E09EB6D647C.idx  Queen.hpp.FBB3665C2405183D.idx  Rook.cpp.3179BB1811E3C0C4.idx  Rook.hpp.4F84CD1FAF5CBEDB.idx  main.cpp.8AD7968DE201EC25.idx
src/: Board.cpp  Board.hpp  main.cpp
src/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
